grammar_to_ply/error_msgs.txt
  File "../programs/python/toy_programs/output_programs/errors/factorial_1errors_1_error.py", line 1
    NAME missing
               ^
SyntaxError: invalid syntax
